[package]
name = "lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.3.9", features = ["psapi", "processthreadsapi","winnt","winbase", "impl-default", "memoryapi","winnt", "winbase"]}
ntapi = "0.4.0"
winproc = "0.6.4"
pelite = "0.9.1"

[lib]
name = "my_lib"
path = "src/lib.rs"

